--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
         <div id="nav-menu" class="m-col-span-7">
               <p><a href="get-services.html">Services</a></p>
+              <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
-              <p><a href="about.html">About</a></p>
               <p><a href="contact.html">Contact</a></p>
         </div>
 
@@ -80,7 +80,7 @@
             <p id="left-arrow" class="arrow">◄</p>
             <a id="home-hero-link">
               <div id="home-con" class="grid-con">
-                <div id="home-hero-image" class="col-span-full hero-image">
+                <div id="home-hero-image" class="col-span-full m-col-start-2 m-col-span-10 hero-image">
                   <div>
                     <p id="home-hero-text" class="hero-text"></p>
                     <p class="home-hero-supplementary-text"></p>
