--- a/network.html
+++ b/network.html
@@ -54,9 +54,9 @@
 
         <div id="nav-menu" class="m-col-span-7">
               <p><a href="get-services.html">Services</a></p>
+              <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
-              <p><a href="about.html">About</a></p>
               <p><a href="contact.html">Contact</a></p>
         </div>
 
@@ -132,9 +132,9 @@
             <p class="dmt">We are always looking to expand our network, but we also have a plan of action on how to use our network.</p>
 
             <ul>
-                <li class="dmt"><span class="bold-text">Build a network of healthcare providers:</span> We want to connect patients to HCPs who are willing to support afforable access to mental health care.</li>
-                <li class="dmt"><span class="bold-text">Establish a Board of Governance:</span> We want to create a board that serves the people and make our foundation known.</li>
-                <li class="dmt"><span class="bold-text">Build a network of companies and employers:</span> We want to connect youth to employers who understand the struggles and are willing to provide flexible and accommodating employment opportunities</li>
+                <li class="dmt"><span class="bold-text">Primary Goal:</span>Facilitate access to better mental health services for youth 16-25 who suffer from sever mental health conditions under the umbrella of Psychosis, BPD, and Schizophrenia</li>
+                <li class="dmt"><span class="bold-text">Build a network of healthcare providers:</span> We want to connect patients to HCPs who are willing to support affordable access to mental health care.</li>
+                <li class="dmt"><span class="bold-text">Build a network of companies and employers:</span> We want to connect youth to employers who understand the struggles and are willing to provide flexible and accommodating employment opportunities.</li>
                 <li class="dmt"><span class="bold-text">Identify fundraising initiatives:</span> We want to have a network that can provide sustainability and long-term support for Foundation Sixty6.</li>
             </ul>
         </div>
