--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
         <div id="become-text-con" class="col-span-full m-col-span-5">
             <div id="become-text">
                 <h3 id="about-title-tablet" class="dmt">Become A Partner?</h3>
-                <p class="dmt">Help grow us by partnering and being part of this movement. Contact us <a id="about-contact-link" href="contact.html">here</a></p>
+                <p class="dmt">Help grow us by partnering and being part of this movement. See why you should partner with us <a id="about-network-link" href="network.html">here</a> or contact us <a id="about-contact-link" href="contact.html">here</a></p>
             </div>
         </div>
     </section>
