--- a/donate.html
+++ b/donate.html
@@ -78,7 +78,7 @@
     <section id="donate-hero" class="full-width-grid-con">
       <h2 class="hidden">Donate Hero Image</h2>
         <div id="donate-inside" class="col-span-full hero-image">
-            <p class="hero-text">Contribute Now,<br> Make An Everlasting Impact</p>
+            <p class="hero-text">Donate</p>
             <div id="donate-gfe-redirect">
               <a class="custom-button" href="">Donate Now</a>
             </div>
@@ -92,19 +92,19 @@
                 <div class="reason-box">
                     <img src="images/icons/donate1.svg" alt="Empower Icon">
                     <h3 class="dmt">Empower Young Minds</h3>
-                    <p class="dmt">Your donation directly empowers young individuals by providing crucial access to mental health services.</p>
+                    <p class="dmt">Your donation directly empowers young individuals by providing crucial access to mental health services and help provide accurate information.</p>
                 </div>
 
                 <div class="reason-box">
                     <img src="images/icons/donate2.svg" alt="Expand Icon">
-                    <h3 class="dmt">Expand Mental Health Care</h3>
-                    <p class="dmt">Donations expand mental health services, training professionals, establishing facilities, and ensuring timely care for individuals aged 16-25</p>
+                    <h3 class="dmt">Programs and Resources</h3>
+                    <p class="dmt">Your donations help support programs within the community and help fund resources to educate on the importance of mental health.</p>
                 </div>
 
                 <div class="reason-box">
                     <img src="images/icons/donate3.svg" alt="Enhance Icon">
                     <h3 class="dmt">Enhance Care Quality</h3>
-                    <p class="dmt">Your donation improves the quality and accessibility of mental healthcare, ensuring more effective and supportive services.</p>
+                    <p class="dmt">Your donation improves the accessibility of mental healthcare, ensuring more effective and better quality services for those in need.</p>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
     </section>
 
     <section id="statistics-con" class="grid-con">
-      <h3 class="col-span-full">Statistics and Facts</h3>
+      <h3 class="col-span-full dmt">Statistics and Facts</h3>
     </section>
 
     <div class="grid-con">
