--- a/network.html
+++ b/network.html
@@ -91,6 +91,23 @@
     </section>
 
     <div class="grid-con">
+      <div class="col-span-full divider"></div>
+    </div>
+
+    <section id="network-goals-con" class="grid-con">
+      <div id="network-goals" class="col-span-full">
+          <h3 class="dmt">Our Goals</h3>
+          <p class="dmt">We are always looking to expand our network, but we also have a plan of action on how to use our network.</p>
+          <ul>
+              <li class="dmt"><span class="bold-text">Primary Goal:</span> Facilitate access to better mental health services for youth 16-25 who suffer from sever mental health conditions under the umbrella of Psychosis, BP, and Schizophrenia</li>
+              <li class="dmt"><span class="bold-text">Build a network of healthcare providers:</span> We want to connect patients to HCPs who are willing to support affordable access to mental health care.</li>
+              <li class="dmt"><span class="bold-text">Build a network of companies and employers:</span> We want to connect youth to employers who understand the struggles and are willing to provide flexible and accommodating employment opportunities.</li>
+              <li class="dmt"><span class="bold-text">Identify fundraising initiatives:</span> We want to have a network that can provide sustainability and long-term support for Foundation Sixty6.</li>
+          </ul>
+      </div>
+  </section>
+
+    <div class="grid-con">
         <div class="col-span-full divider"></div>
     </div>
 
@@ -107,38 +124,29 @@
                 <li class="dmt">Youth are resorting to self-diagnosis, and often times they are misinformed and cannot properly help themselves</li>
                 <li class="dmt">Opportunities for stability disappear due to misinformation or misconceptions</li>
             </ul>
-
-            <p class="dmt">Here in Ontario, we are facing major gaps that impact and impair those seeking mental health services.</p>
-
-            <ul id="network-facts">
-                <li class="dmt">As a society, we are facing a mental health epidemic, especially post-COVID</li>
-                <li class="dmt">There are major gaps in Ontario's healthcare system, and getting help is more difficult than it should be</li>
-                <li class="dmt">There is an inadequate number of doctors and healthcare providers who can provide those services as well</li>
-                <li class="dmt">Struggling youth without substance use disorder (SUD) are deprioritized</li>
-                <li class="dmt">When budget decisions are made, mental healthcare is not a priority</li>
-            </ul>
-
-            <p class="dmt">We at Foundation Sixty6 want to help bridge these gaps. We want to expand our network and provide support to struggling youth. We aim to make a difference in the world, and we encourage you to support and join our cause.</p>
         </div>
     </section>
 
     <div class="grid-con">
-        <div class="col-span-full divider"></div>
+      <div class="col-span-full divider"></div>
     </div>
 
-    <section id="network-goals-con" class="grid-con">
-        <div id="network-goals" class="col-span-full">
-            <h3 class="dmt">Our Goals</h3>
-            <p class="dmt">We are always looking to expand our network, but we also have a plan of action on how to use our network.</p>
+    <section id="gaps" class="grid-con">
+      <div class="col-span-full">
+          <h3 class="dmt">The Gaps In Services</h3>
+          <p class="dmt">Here in Ontario, we are facing major gaps that impact and impair those seeking mental health services.</p>
 
-            <ul>
-                <li class="dmt"><span class="bold-text">Primary Goal:</span>Facilitate access to better mental health services for youth 16-25 who suffer from sever mental health conditions under the umbrella of Psychosis, BP, and Schizophrenia</li>
-                <li class="dmt"><span class="bold-text">Build a network of healthcare providers:</span> We want to connect patients to HCPs who are willing to support affordable access to mental health care.</li>
-                <li class="dmt"><span class="bold-text">Build a network of companies and employers:</span> We want to connect youth to employers who understand the struggles and are willing to provide flexible and accommodating employment opportunities.</li>
-                <li class="dmt"><span class="bold-text">Identify fundraising initiatives:</span> We want to have a network that can provide sustainability and long-term support for Foundation Sixty6.</li>
-            </ul>
-        </div>
-    </section>
+          <ul id="network-facts">
+              <li class="dmt">As a society, we are facing a mental health epidemic, especially post-COVID</li>
+              <li class="dmt">There are major gaps in Ontario's healthcare system, and getting help is more difficult than it should be</li>
+              <li class="dmt">There is an inadequate number of doctors and healthcare providers who can provide those services as well</li>
+              <li class="dmt">Struggling youth without substance use disorder (SUD) are deprioritized</li>
+              <li class="dmt">When budget decisions are made, mental healthcare is not a priority</li>
+          </ul>
+
+          <p class="dmt">We at Foundation Sixty6 want to help bridge these gaps. We want to expand our network and provide support to struggling youth. We aim to make a difference in the world, and we encourage you to support and join our cause.</p>
+      </div>
+  </section>
 
     <div class="grid-con">
         <div class="col-span-full divider"></div>
