--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         </div>
 
         <div id="nav-menu" class="m-col-span-7">
-              <p><a href="get-services.html">Services</a></p>
+              <p><a href="get-services.html">What We Do</a></p>
               <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
@@ -94,8 +94,8 @@
     <section id="our-story" class="full-width-grid-con">
         <div id="story-con" class="grid-con">
             <div class="col-span-full">
-                <h3>Our Story</h3>
-                <p>Navigating their son Caelan’s severe mental health challenges, the Hagerty family sheds light on the gaps in Ontario’s mental healthcare system. Their mission to secure Caelan’s future extends to advocating for systemic improvements, echoing the shared struggles of many families.</p>
+                <h3 class="dmt">Our Story</h3>
+                <p class="dmt">Navigating their son Caelan’s severe mental health challenges, the Hagerty family sheds light on the gaps in Ontario’s mental healthcare system. Their mission to secure Caelan’s future extends to advocating for systemic improvements, echoing the shared struggles of many families.</p>
             </div>
 
             <div id="about-video-con" class="col-span-full">
@@ -142,16 +142,6 @@
 
         <div id="members" class="col-span-full">
             <div class="member-profile">
-                <div id="stuart-icon" class="member-pic">
-                  <div class="about-shader"></div>
-                  <p class="member-text dmt desktop">"This foundation as I see it is to provide opportunities for a lifetime, but more widely, to provide hope to people out there that people do care."</p>
-                </div>
-                <div class="green-bumper"></div>
-                <p class="member-name dmt">Stuart du Kamp</p>
-                <p class="member-text dmt portable">"This foundation as I see it is to provide opportunities for a lifetime, but more widely, to provide hope to people out there that people do care."</p>
-            </div>
-
-            <div class="member-profile">
                 <div id="aimee-icon" class="member-pic">
                   <div class="about-shader"></div>
                   <p class="member-text dmt desktop">"We identfied all these areas through our own experience with Caelan and wanted to make a difference so we started this foundation to do that."</p>
@@ -180,6 +170,16 @@
                 <p class="member-name bottom-member dmt">Bill Hagerty</p>
                 <p class="member-text dmt portable">"We're trying to help other people trying to navigate through the services that are out there."</p>
             </div>
+
+            <div class="member-profile">
+              <div id="stuart-icon" class="member-pic">
+                <div class="about-shader"></div>
+                <p class="member-text dmt desktop">"This foundation, as I see it, is to provide opportunities for a lifetime, but more widely, to provide hope to people out there that people do care."</p>
+              </div>
+              <div class="green-bumper"></div>
+              <p class="member-name dmt">Stuart du Kamp</p>
+              <p class="member-text dmt portable">"This foundation as I see it is to provide opportunities for a lifetime, but more widely, to provide hope to people out there that people do care."</p>
+          </div>
 
             <div class="member-profile">
                 <div id="russell-icon" class="member-pic">
@@ -250,7 +250,7 @@
         <div id="become-text-con" class="col-span-full m-col-span-5">
             <div id="become-text">
                 <h3 id="about-title-tablet" class="dmt">Become A Partner?</h3>
-                <p class="dmt">Help grow us by partnering and being part of this movement. See why you should partner with us <a id="about-network-link" href="network.html">here</a> or contact us <a id="about-contact-link" href="contact.html">here</a></p>
+                <p class="dmt">Help grow us by partnering and being part of this movement. See why you should partner with us <a id="about-network-link" href="network.html">here</a> or contact us <a id="about-contact-link" href="contact.html">here</a>.</p>
             </div>
         </div>
     </section>
@@ -263,7 +263,7 @@
 
         <div id="footer-links" class="col-span-full m-col-span-4">
           <ul>
-            <li><a href="get-services.html">Services</a></li>
+            <li><a href="get-services.html">What We Do</a></li>
             <li><a href="network.html">Network</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="about.html">About</a></li>
@@ -316,7 +316,7 @@
         <div class="grid-con">
           <p class="lb-close col-start-4 col-end-5">X</p>
           <div id="lightbox-menu" class="col-span-full">
-            <p><a href="get-services.html">Services</a></p>
+            <p><a href="get-services.html">What We Do</a></p>
             <p><a href="network.html">Network</a></p>
             <p><a href="about.html">About</a></p>
             <p><a href="events.html">Events</a></p>
