--- a/get-services.html
+++ b/get-services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Services- Foundation Sixty6</title>
+    <title>What We Do- Foundation Sixty6</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/main.css">
@@ -23,7 +23,7 @@
     <script type="module" defer src="js/main.js"></script>
 </head>
 <body data-page="services">
-    <h1 class="hidden">Foundation Sixty6 Get Services Page</h1>
+    <h1 class="hidden">Foundation Sixty6 What We Do Page</h1>
 
     <header class="full-width-grid-con">
       <div id="header-con" class="grid-con">
@@ -53,7 +53,7 @@
         </div>
 
         <div id="nav-menu" class="m-col-span-7">
-              <p><a href="get-services.html">Services</a></p>
+              <p><a href="get-services.html">What We Do</a></p>
               <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
@@ -76,8 +76,8 @@
     
     <section id="services-hero" class="full-width-grid-con">
         <div class="col-span-full hero-image">
-          <h2 class="hidden">Services Hero Image</h2>
-            <p class="hero-text">Services</p>
+          <h2 class="hidden">What We Do Hero Image</h2>
+            <p class="hero-text">What We Do</p>
         </div>
     </section>
 
@@ -89,7 +89,7 @@
     </section>
 
     <section id="services-info" class="grid-con">
-      <h2 class="hidden">Services Information</h2>
+      <h2 class="hidden">What We Do Information</h2>
     </section>
 
     <footer class="full-width-grid-con">
@@ -100,7 +100,7 @@
 
         <div id="footer-links" class="col-span-full m-col-span-4">
           <ul>
-            <li><a href="get-services.html">Services</a></li>
+            <li><a href="get-services.html">What We Do</a></li>
             <li><a href="network.html">Network</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="about.html">About</a></li>
@@ -153,7 +153,7 @@
       <div class="grid-con">
         <p class="lb-close col-start-4 col-end-5">X</p>
         <div id="lightbox-menu" class="col-span-full">
-          <p><a href="get-services.html">Services</a></p>
+          <p><a href="get-services.html">What We Do</a></p>
           <p><a href="network.html">Network</a></p>
           <p><a href="about.html">About</a></p>
           <p><a href="events.html">Events</a></p>
