--- a/network.html
+++ b/network.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Services- Foundation Sixty6</title>
+    <title>Network- Foundation Sixty6</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/main.css">
@@ -23,7 +23,7 @@
     <script type="module" defer src="js/main.js"></script>
 </head>
 <body data-page="network">
-    <h1 class="hidden">Foundation Sixty6 Get Services Page</h1>
+    <h1 class="hidden">Foundation Sixty6 Network Page</h1>
 
     <header class="full-width-grid-con">
       <div id="header-con" class="grid-con">
@@ -53,7 +53,7 @@
         </div>
 
         <div id="nav-menu" class="m-col-span-7">
-              <p><a href="get-services.html">Services</a></p>
+              <p><a href="get-services.html">What We Do</a></p>
               <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
@@ -112,7 +112,7 @@
     </div>
 
     <section id="connect-why" class="grid-con">
-        <div class="col-span-full">
+        <div class="col-span-full m-col-span-6">
             <h3 class="dmt">Why Become Part Of Our Network?</h3>
             <p class="dmt">Foundation Sixty6 is built on the heart and soul of people who care about mental health and want to provide a safe and secure future for struggling youth and their families. We are the people who want to make a difference in the world, because the cost of inaction is too great.</p>
 
@@ -125,6 +125,8 @@
                 <li class="dmt">Opportunities for stability disappear due to misinformation or misconceptions</li>
             </ul>
         </div>
+
+        <div id="part-image" class="col-span-full m-col-span-6"></div>
     </section>
 
     <div class="grid-con">
@@ -182,7 +184,7 @@
   
           <div id="footer-links" class="col-span-full m-col-span-4">
             <ul>
-              <li><a href="get-services.html">Services</a></li>
+              <li><a href="get-services.html">What We Do</a></li>
               <li><a href="network.html">Network</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li><a href="about.html">About</a></li>
@@ -235,7 +237,7 @@
         <div class="grid-con">
           <p class="lb-close col-start-4 col-end-5">X</p>
           <div id="lightbox-menu" class="col-span-full">
-            <p><a href="get-services.html">Services</a></p>
+            <p><a href="get-services.html">What We Do</a></p>
             <p><a href="network.html">Network</a></p>
             <p><a href="about.html">About</a></p>
             <p><a href="events.html">Events</a></p>
