--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="nav-menu" class="m-col-span-7">
-              <p><a href="get-services.html">Services</a></p>
+              <p><a href="get-services.html">What We Do</a></p>
               <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
@@ -90,28 +90,28 @@
 
     <section id="support-number" class="grid-con">
         <div class="col-span-full m-col-start-2 m-col-end-12">
-            <h3 id="helpline">Need Support Right Now?</h3>
+            <h3 id="helpline" class="dmt">Need Support Right Now?</h3>
             <div id="help-numbers">
               <div class="number-con">
-                <h3>Kids Help Phone</h3>
-                <p>Free, 24/7 e-mental health support for children and youth (ages 5-20) in English and French via phone, text, and online resources.</p>
-                <p class="number">1-800-668-6868</p>
+                <h3 class="dmt">Kids Help Phone</h3>
+                <p class="dmt">Free, 24/7 e-mental health support for children and youth (ages 5-20) in English and French via phone, text, and online resources.</p>
+                <p class="number dmt">1-800-668-6868</p>
               </div>
   
               <div class="support-break"></div>
   
               <div class="number-con">
-                <h3>Good2Talk</h3>
-                <p>Free, confidential support services for post-secondary students in Ontario ages 17–25.</p>
-                <p class="number">1-866-925-5454</p>
+                <h3 class="dmt">Good2Talk</h3>
+                <p class="dmt">Free, confidential support services for post-secondary students in Ontario ages 17–25.</p>
+                <p class="number dmt">1-866-925-5454</p>
               </div>
   
               <div class="support-break"></div>
   
               <div class="number-con">
-                <h3>Crisis Support</h3>
-                <p>If you or someone you know is thinking about suicide, call or text  9-8-8. Help is available 24 hours a day, 7 days a week.</p>
-                <p class="number">9-8-8</p>
+                <h3 class="dmt">Crisis Support</h3>
+                <p class="dmt">If you or someone you know is thinking about suicide, call or text  9-8-8. Help is available 24 hours a day, 7 days a week.</p>
+                <p class="number dmt">9-8-8</p>
               </div>
             </div>
             
@@ -168,7 +168,7 @@
 
         <div id="footer-links" class="col-span-full m-col-span-4">
           <ul>
-            <li><a href="get-services.html">Services</a></li>
+            <li><a href="get-services.html">What We Do</a></li>
             <li><a href="network.html">Network</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="about.html">About</a></li>
@@ -221,7 +221,7 @@
       <div class="grid-con">
         <p class="lb-close col-start-4 col-end-5">X</p>
         <div id="lightbox-menu" class="col-span-full">
-          <p><a href="get-services.html">Services</a></p>
+          <p><a href="get-services.html">What We Do</a></p>
           <p><a href="network.html">Network</a></p>
           <p><a href="about.html">About</a></p>
           <p><a href="events.html">Events</a></p>
