--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="nav-menu" class="m-col-span-7">
-              <p><a href="get-services.html">Services</a></p>
+              <p><a href="get-services.html">What We Do</a></p>
               <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
@@ -101,7 +101,7 @@
 
         <div id="footer-links" class="col-span-full m-col-span-4">
           <ul>
-            <li><a href="get-services.html">Services</a></li>
+            <li><a href="get-services.html">What We Do</a></li>
             <li><a href="network.html">Network</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="about.html">About</a></li>
@@ -154,7 +154,7 @@
       <div class="grid-con">
         <p class="lb-close col-start-4 col-end-5">X</p>
         <div id="lightbox-menu" class="col-span-full">
-          <p><a href="get-services.html">Services</a></p>
+          <p><a href="get-services.html">What We Do</a></p>
           <p><a href="network.html">Network</a></p>
           <p><a href="about.html">About</a></p>
           <p><a href="events.html">Events</a></p>
