--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div id="nav-menu" class="m-col-span-7">
-              <p><a href="get-services.html">Services</a></p>
+              <p><a href="get-services.html">What We Do</a></p>
               <p><a href="about.html">About</a></p>
               <p><a href="network.html">Network</a></p>
               <p id="explore" class="drop-menu">Explore ▼</p>
@@ -104,7 +104,7 @@
     <section id="home-video-con" class="full-width-grid-con">
       <div class="grid-con">
         <div id="home-video-title" class="col-span-full m-col-start-2 m-col-span-10">
-          <h3>Our History</h3>
+          <h3 class="dmt">Our History</h3>
         </div>
         <div id="home-video" class="col-span-full m-col-start-2 m-col-span-10 video-con">
           <video controls poster="images/video-posters/founders.jpg">
@@ -155,8 +155,8 @@
       <div id="mi-wrapper" class="grid-con">
         <div id="mental-illness" class="col-span-full">
           <div id="mi-text">
-            <h3>Mental Health Conditions</h3>
-            <p>Foundation Sixty6 helps youth and families dealing with:</p>
+            <h3 class="dmt">Mental Health Conditions</h3>
+            <p class="dmt">Foundation Sixty6 helps youth and families dealing with:</p>
           </div>
         </div>
 
@@ -190,7 +190,7 @@
 
       <a href="get-services.html" class="col-span-full m-col-start-2 m-col-span-5 home-link">
         <div class="home-redirect" id="services-redirect">
-          <h3 class="redirect-title">Our Services</h3>
+          <h3 class="redirect-title">What We Do</h3>
           <div class="shader"></div>
         </div>
       </a>
@@ -225,7 +225,7 @@
 
         <div id="footer-links" class="col-span-full m-col-span-4">
           <ul>
-            <li><a href="get-services.html">Services</a></li>
+            <li><a href="get-services.html">What We Do</a></li>
             <li><a href="network.html">Network</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="about.html">About</a></li>
@@ -278,7 +278,7 @@
       <div class="grid-con">
         <p class="lb-close col-start-4 col-end-5">X</p>
         <div id="lightbox-menu" class="col-span-full">
-          <p><a href="get-services.html">Services</a></p>
+          <p><a href="get-services.html">What We Do</a></p>
           <p><a href="network.html">Network</a></p>
           <p><a href="about.html">About</a></p>
           <p><a href="events.html">Events</a></p>
