--- a/donate.html
+++ b/donate.html
@@ -80,7 +80,7 @@
         <div id="donate-inside" class="col-span-full hero-image">
             <p class="hero-text">Donate</p>
             <div id="donate-gfe-redirect">
-              <a class="custom-button" href="">Donate Now</a>
+              <a class="custom-button" href="">DONATE NOW</a>
             </div>
         </div>
     </section>
