--- a/network.html
+++ b/network.html
@@ -99,7 +99,7 @@
           <h3 class="dmt">Our Goals</h3>
           <p class="dmt">We are always looking to expand our network, but we also have a plan of action on how to use our network.</p>
           <ul>
-              <li class="dmt"><span class="bold-text">Primary Goal:</span> Facilitate access to better mental health services for youth 16-25 who suffer from sever mental health conditions under the umbrella of Psychosis, BP, and Schizophrenia</li>
+              <li class="dmt"><span class="bold-text">Primary Goal:</span> Facilitate access to better mental health services for youth 16-25 who suffer from sever mental health conditions under the umbrella of Psychosis, Bipolar Disorder, and Schizophrenia</li>
               <li class="dmt"><span class="bold-text">Build a network of healthcare providers:</span> We want to connect patients to HCPs who are willing to support affordable access to mental health care.</li>
               <li class="dmt"><span class="bold-text">Build a network of companies and employers:</span> We want to connect youth to employers who understand the struggles and are willing to provide flexible and accommodating employment opportunities.</li>
               <li class="dmt"><span class="bold-text">Identify fundraising initiatives:</span> We want to have a network that can provide sustainability and long-term support for Foundation Sixty6.</li>
